trybuild_tests/tests/trybuild/pass/raw_identifier.rs
use butane::FieldType;

#[derive(FieldType)]
enum r#Type {
    A,
    B,
}

fn main() {}
